		* Various fixes to new colour code
		* Allow user to select display of transfer rates
		* Extendable list-control settings save/load code
		* Implemented an alternate method to estimate the real user count
		  in the Kad network, which is not based on our local routing table.
		  (port from eMule v0.49b)
		* Dropped assumption that last search keyword is a filename
		  extension if length == 3.

	Greek:
		* Part number is now an extra column in the download list
		* Improvements to preferences dialogs
		* Redesign skin selection

	jolz:
		* Fixed file locking between ed2k and aMule on Windows

	Kry:
		* Fix indexes after removing GUI items
		* Resolve MSVC compilation problem with separate strings in GUI
		* Fixes to Windows build
		* Allow compilation with wxCocoa
		* Replace Color.h by new class implementation MuleColour
		* Lower class overhead and use two-level cache for pens/brushes
		* Added aMuleCMD project for MSVC.
		* Fixed UnitTests and aMuleCMD in MSVC to use _CONSOLE subsystem.
		* Preferences changes

	lfroen:
		* php prefix for lex/yacc

	LittleAbacus:
		* Search results can now be sorted by "knownness" state.

	marcell:
		* Fixed issue #892: Show data sizes >= 1.0 GB with three digits.
		* Fixed search 'Stop' button not stopping Kad searches.
		* Check Kademlia search results against original criteria.
		* Allow Kademlia searches with repetitive keywords.

	morph:
		* Patch to uniform and fix minor errors on man pages

	myth:
		* Feedback from shared files - add number of clients on queue.

	Skolnick:
		* Fixed autogen.sh for Bourne Shell

	Stu Redman:
		* Sort source list on opening and add file name to A4AF files
		* MSVC: optional GeoIP support
		* Faster progress bars with less overhead (without pens/brushes)
		* Show log messages in remote gui
		* More info in the Kad tab
		* Improved gaplist performance
		* Ported chat captchas (receive and send) 
		  and "Advanced Chat Spam Filter" from eMule